--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,13 +12,21 @@ jobs:
       - name: Checkout do repositório
         uses: actions/checkout@v4
 
-      - name: Gerar snake SVG
+      - name: Criar pasta dist
+        run: mkdir -p dist
+
+      - name: Gerar snake SVG (normal)
         uses: Platane/snk@v3
         with:
           github_user_name: SEU-USUARIO
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          output: dist/github-contribution-grid-snake.svg
+
+      - name: Gerar snake SVG (dark)
+        uses: Platane/snk@v3
+        with:
+          github_user_name: SEU-USUARIO
+          output: dist/github-contribution-grid-snake-dark.svg
+          palette: github-dark
 
       - name: Publicar no branch "output"
         uses: crazy-max/ghaction-github-pages@v4
@@ -27,3 +35,6 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+
