--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,40 +1,30 @@
-name: Generate snake
+name: Generate Snake Game
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # roda diariamente
+    - cron: "0 */6 * * *"  # A cada 6 horas
   workflow_dispatch:
+  push:
+    branches:
+    - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: Jobs to update snake grid
     steps:
-      - name: Checkout do repositório
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Criar pasta dist
-        run: mkdir -p dist
-
-      - name: Gerar snake SVG (normal)
-        uses: Platane/snk@v3
+      - uses: Platane/snk@master
+        id: snake-gif
         with:
-          github_user_name: SEU-USUARIO
-          output: dist/github-contribution-grid-snake.svg
+          github_user_name: ysabellyysa  # SEU USERNAME AQUI
+          svg_out_path: dist/github-contribution-grid-snake.svg
+          gif_out_path: dist/github-contribution-grid-snake.gif
 
-      - name: Gerar snake SVG (dark)
-        uses: Platane/snk@v3
-        with:
-          github_user_name: SEU-USUARIO
-          output: dist/github-contribution-grid-snake-dark.svg
-          palette: github-dark
-
-      - name: Publicar no branch "output"
-        uses: crazy-max/ghaction-github-pages@v4
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-
