--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,28 +1,29 @@
-name: Generate Snake Game
+name: Generate snake game
 
 on:
-  schedule:
-    - cron: "0 */6 * * *"  # A cada 6 horas
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
   workflow_dispatch:
-  push:
-    branches:
-    - main
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
-    name: Jobs to update snake grid
+    timeout-minutes: 10
+    
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: Platane/snk@master
-        id: snake-gif
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v2
         with:
-          github_user_name: ysabellyysa  # SEU USERNAME AQUI
-          svg_out_path: dist/github-contribution-grid-snake.svg
-          gif_out_path: dist/github-contribution-grid-snake.gif
+          github_user_name: Ysabellysa
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
           target_branch: output
           build_dir: dist
